--- a/school_attendance/wizard/student_attendance_by_month_view.xml
+++ b/school_attendance/wizard/student_attendance_by_month_view.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
         <!-- Form View Of Student Attendance By Month -->
@@ -11,13 +10,35 @@
                 <form string="Student Monthly Attendance Report">
                     <separator string="Student Monthly Attendance Report" colspan="4" />
                     <group col="4" colspan="2">
-                        <field name="year" width="200" required="1" widget="selection"/>
-                        <field name="month" width="200" domain="[('year_id','=',year)]" required="1" widget="selection"/>
+                        <field
+                        name="year"
+                        width="200"
+                        required="1"
+                        widget="selection"
+                    />
+                        <field
+                        name="month"
+                        width="200"
+                        domain="[('year_id','=',year)]"
+                        required="1"
+                        widget="selection"
+                    />
                     </group>
                     <footer>
                     <group colspan="4">
-                        <button name="print_report" class="fa fa-check" string="Print" type="object" colspan="1" />
-                        <button class="fa fa-ban" special="cancel" string="Cancel" colspan="1" />
+                        <button
+                            name="print_report"
+                            class="fa fa-check"
+                            string="Print"
+                            type="object"
+                            colspan="1"
+                        />
+                        <button
+                            class="fa fa-ban"
+                            special="cancel"
+                            string="Cancel"
+                            colspan="1"
+                        />
                     </group>
                     </footer>
                 </form>
@@ -33,7 +54,7 @@
             <field name="view_mode">form</field>
             <field name="target">new</field>
             <field name="context">{'student_id': active_id}</field>
-            <field name="binding_model_id" ref="school.model_student_student"/>
+            <field name="binding_model_id" ref="school.model_student_student" />
             <field name="binding_type">report</field>
         </record>
 
