--- a/school_attendance/report/report_view.xml
+++ b/school_attendance/report/report_view.xml
@@ -1,8 +1,7 @@
-
 <odoo>
     <record id="monthly_attendance_report_pf" model="report.paperformat">
             <field name="name">Mothly Attendance Report</field>
-            <field name="default" eval="True"/>
+            <field name="default" eval="True" />
             <field name="format">A4</field>
             <field name="page_height">0</field>
             <field name="page_width">0</field>
@@ -11,7 +10,7 @@
             <field name="margin_bottom">25</field>
             <field name="margin_left">5</field>
             <field name="margin_right">5</field>
-            <field name="header_line" eval="False"/>
+            <field name="header_line" eval="False" />
             <field name="header_spacing">20</field>
             <field name="dpi">90</field>
     </record>
@@ -22,11 +21,17 @@
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">school_attendance.attendance_month</field>
         <field name="report_file">school_attendance.attendance_month</field>
-        <field name="paperformat_id" ref="school_attendance.monthly_attendance_report_pf"/>
+        <field
+            name="paperformat_id"
+            ref="school_attendance.monthly_attendance_report_pf"
+        />
         <field name="binding_type">report</field>
-        <field name="groups_id" eval="[(4, ref('school.group_school_administration')),
+        <field
+            name="groups_id"
+            eval="[(4, ref('school.group_school_administration')),
                                        (4, ref('school.group_school_student')),
-                                       (4, ref('school.group_school_teacher'))]"/>
+                                       (4, ref('school.group_school_teacher'))]"
+        />
     </record>
 
 </odoo>
