--- a/school_attendance/wizard/monthly_attendance_wizard_view.xml
+++ b/school_attendance/wizard/monthly_attendance_wizard_view.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
     <record id="view_monthly_attendance_wizard_form" model="ir.ui.view">
@@ -9,25 +9,44 @@
                 <sheet>
                     <group colspan="4">
                         <group>
-                            <field name="academic_year_id" required="1"
-                                 options="{&quot;no_create&quot;: True, &quot;no_search&quot;: True, &quot;no_open&quot;: True}"/>
-                            <field name="month" required="1"/>
-                            <field name="month_str" required="1" invisible="1"/>
+                            <field
+                                name="academic_year_id"
+                                required="1"
+                                options="{&quot;no_create&quot;: True, &quot;no_search&quot;: True, &quot;no_open&quot;: True}"
+                            />
+                            <field name="month" required="1" />
+                            <field name="month_str" required="1" invisible="1" />
                         </group>
                         <group>
-                            <field name="course_id" required="1"
-                                options="{&quot;no_create&quot;: True, &quot;no_search&quot;: True, &quot;no_open&quot;: True}"/>
-                            <field name="is_elective_subject"/>
-                            <field name="subject_id" attrs="{'invisible':[('is_elective_subject','=', False)], 'required':[('is_elective_subject','!=', False)]}"
-                                options="{&quot;no_create&quot;: True}" domain="[('is_elective_subject', '=', True)]"/>
+                            <field
+                                name="course_id"
+                                required="1"
+                                options="{&quot;no_create&quot;: True, &quot;no_search&quot;: True, &quot;no_open&quot;: True}"
+                            />
+                            <field name="is_elective_subject" />
+                            <field
+                                name="subject_id"
+                                attrs="{'invisible':[('is_elective_subject','=', False)], 'required':[('is_elective_subject','!=', False)]}"
+                                options="{&quot;no_create&quot;: True}"
+                                domain="[('is_elective_subject', '=', True)]"
+                            />
+                            />
                         </group>
                     </group>
                 </sheet>
                 <footer>
-                    <button class="oe_highlight" string="Generate .pdf" name="generate_attendance"
-                        type="object" />
-                    <button class="oe_highlight" string="Generate .xlsx" name="print_report"
-                        type="object" />
+                    <button
+                        class="oe_highlight"
+                        string="Generate .pdf"
+                        name="generate_attendance"
+                        type="object"
+                    />
+                    <button
+                        class="oe_highlight"
+                        string="Generate .xlsx"
+                        name="print_report"
+                        type="object"
+                    />
                 </footer>
             </form>
         </field>
@@ -41,9 +60,13 @@
         <field name="target">new</field>
     </record>
 
-    <menuitem id="menu_monthly_attendances" name="Monthly Attendance Report"
-        parent="school_attendance.menu_attendance" action="report_monthly"
-        sequence="51" />
+    <menuitem
+        id="menu_monthly_attendances"
+        name="Monthly Attendance Report"
+        parent="school_attendance.menu_attendance"
+        action="report_monthly"
+        sequence="51"
+    />
         <!-- groups="school.group_school_administration" -->
 
 </odoo>
