[MIG] School Fees: Migrated school fees into 16.0 and solved pre-commits

--- a/school_fees/views/student_fees_register.xml
+++ b/school_fees/views/student_fees_register.xml
@@ -9,7 +9,7 @@
                         <div class="oe_structure" />
                         <div class="row" align="center">
                             <span>
-                                <h1 class="text-center">Students Payroll Register</h1>
+                                <h1 class="text-center">Student Payroll Register</h1>
                             </span>
                         </div>
                         <div
@@ -96,8 +96,7 @@
                             </thead>
                             <tbody>
                                 <t t-set="counter" t-value="0" />
-                                <t t-set="total" t-value="0" />
-                                <t t-foreach="payslip" t-as="l">
+                                <t t-foreach="o.line_ids" t-as="l">
                                     <t t-set="counter" t-value="counter+1" />
                                     <tr>
                                         <td>
@@ -122,10 +121,6 @@
                                             style="font-family: 'Helvetica';font-size: 16px;"
                                         >
                                             <span t-esc="l.total" />
-                                            <t
-                                                t-set="total"
-                                                t-value="total + l.total"
-                                            />
                                         </td>
                                     </tr>
                                 </t>
@@ -146,7 +141,7 @@
                                     width="45%"
                                     style="font-family: 'Helvetica';font-size: 16px;"
                                 >
-                                    <b t-esc="total" />
+                                    <b t-esc="o.total_amount" />
                                 </td>
                             </tr>
                         </table>
