[MIG] School Transport: Migrated school transport into 16.0 and solved pre-commits

--- a/school_transport/wizard/transfer_vehicle.xml
+++ b/school_transport/wizard/transfer_vehicle.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
         <!-- Form View Of Transfer Vehicle -->
@@ -13,16 +11,31 @@
                 <form string="Transfer Vehicle">
                     <group colspan="4">
                         <field name='name' />
-                        <field name='participation_id' context="{'name':name}" domain="[('name','=',name)]"/>
+                        <field
+                        name='participation_id'
+                        context="{'name':name}"
+                        domain="[('name','=',name)]"
+                    />
                         <field name='root_id' />
-                        <field name='old_vehicle_id'/>
-                        <field name='new_vehicle_id' context="{'name':root_id}"/>
+                        <field name='old_vehicle_id' />
+                        <field name='new_vehicle_id' context="{'name':root_id}" />
                     </group>
-                    <separator colspan="4"/>
+                    <separator colspan="4" />
                     <footer>
                         <group>
-                            <button name="vehicle_transfer"  string="Transfer" class="fa fa-check" type="object" colspan="1"/>
-                           <button special="cancel" string="Close" class="fa fa-ban" colspan="1"/>
+                            <button
+                            name="vehicle_transfer"
+                            string="Transfer"
+                            class="fa fa-check"
+                            type="object"
+                            colspan="1"
+                        />
+                           <button
+                            special="cancel"
+                            string="Close"
+                            class="fa fa-ban"
+                            colspan="1"
+                        />
                         </group>
                     </footer>
                     </form>
@@ -36,9 +49,12 @@
         <field name="res_model">transfer.vehicle</field>
         <field name="view_mode">form</field>
         <field name="target">new</field>
-        <field name="binding_model_id" ref="model_transfer_vehicle"/>
+        <field name="binding_model_id" ref="model_transfer_vehicle" />
         <field name="binding_view_types">form</field>
-        <field name="groups_id" eval="[(4, ref('school_transport.group_transportation_manager'))]"/>
+        <field
+            name="groups_id"
+            eval="[(4, ref('school_transport.group_transportation_manager'))]"
+        />
     </record>
 
 </odoo>
