--- a/timetable/views/timetable_view.xml
+++ b/timetable/views/timetable_view.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0"?>
+<?xml version="1.0" ?>
 <!DOCTYPE html>
-
 <odoo>
         <!-- Form View Of Time Table Information -->
         <record id="view_time_table_form" model="ir.ui.view">
@@ -10,22 +9,45 @@
                 <form string="TimeTable">
                     <sheet>
                         <group col="4" colspan="4">
-                            <field name="name" placeholder="Enter Description"/>
-                            <field name="standard_id" placeholder="Select Standard" widget="selection"/>
-                            <field name="year_id" placeholder="Select Year" widget="selection"/>
-                            <field name="class_room_id" options="{&quot;no_create&quot;: True}" invisible="1"/>
-                            <field name="user_ids" invisible="1"/>
+                            <field name="name" placeholder="Enter Description" />
+                            <field
+                            name="standard_id"
+                            placeholder="Select Standard"
+                            widget="selection"
+                        />
+                            <field
+                            name="year_id"
+                            placeholder="Select Year"
+                            widget="selection"
+                        />
+                            <field
+                            name="class_room_id"
+                            options="{&quot;no_create&quot;: True}"
+                            invisible="1"
+                        />
+                            <field name="user_ids" invisible="1" />
                         </group>
                         <notebook colspan="4">
                             <page string="TimeTable">
                                 <field name="timetable_ids" nolabel="1" colspan="4">
-                                    <tree string="TimeTable" editable="top">
-                                        <field name="week_day" required="1"/>
-                                        <field name="subject_id" required="1" options='{"no_open": True, "no_create": True}'/>
-                                        <field name="start_time"/>
-                                        <field name="end_time"/>
-                                        <field name="teacher_id" options='{"no_open": True, "no_create": True}' required="1"/>
-                                        <field name="class_room_id" options='{"no_open": True, "no_create": True}'/>
+                                    <tree editable="top">
+                                        <field name="week_day" required="1" />
+                                        <field
+                                        name="subject_id"
+                                        required="1"
+                                        options='{"no_open": True, "no_create": True}'
+                                    />
+                                        <field name="start_time" string='Start Time' />
+                                        <field name="end_time" string='End Time' />
+                                        <field
+                                        name="teacher_id"
+                                        options='{"no_open": True, "no_create": True}'
+                                        required="1"
+                                    />
+                                        <field
+                                        name="class_room_id"
+                                        options='{"no_open": True, "no_create": True}'
+                                    />
                                     </tree>
                                 </field>
                             </page>
@@ -39,10 +61,10 @@
             <field name="name">time.table.tree</field>
             <field name="model">time.table</field>
             <field name="arch" type="xml">
-                <tree string="TimeTable">
-                    <field name="name"/>
-                    <field name="standard_id"/>
-                    <field name="year_id"/>
+                <tree>
+                    <field name="name" />
+                    <field name="standard_id" />
+                    <field name="year_id" />
                 </tree>
             </field>
         </record>
@@ -52,14 +74,23 @@
             <field name="model">time.table</field>
             <field name="arch" type="xml">
                 <search string="TimeTable">
-                    <field name="name"/>
-                    <field name="standard_id"/>
-                    <field name="year_id"/>
-                    <newline/>
+                    <field name="name" />
+                    <field name="standard_id" />
+                    <field name="year_id" />
+                    <newline />
                     <group expand="1" string="Group By">
-                        <filter name="class" string="Academic Class" help="By class"
-                                context="{'group_by':'standard_id'}"/>
-                        <filter name="year" string="Year" help="By year" context="{'group_by':'year_id'}"/>
+                        <filter
+                        name="class"
+                        string="Academic Class"
+                        help="By class"
+                        context="{'group_by':'standard_id'}"
+                    />
+                        <filter
+                        name="year"
+                        string="Year"
+                        help="By year"
+                        context="{'group_by':'year_id'}"
+                    />
                     </group>
                 </search>
             </field>
@@ -73,6 +104,19 @@
             <field name="context">{'default_timetable_type':'regular'}</field>
         </record>
         <!-- Menu items of Timetable -->
-        <menuitem id="menu_timetable_1" name="TimeTable" parent="school.school_schedule" groups="school.group_school_administration,school.group_school_teacher,school.group_school_student,school.group_school_parent" sequence="1"/>
-        <menuitem id="menu_timetable_regular" name="Regular Timetable" parent="menu_timetable_1" action="action_timetable_regular" groups="school.group_school_administration,school.group_school_teacher,school.group_school_student,school.group_school_parent" sequence="61"/>
+        <menuitem
+        id="menu_timetable_1"
+        name="TimeTable"
+        parent="school.school_schedule"
+        groups="school.group_school_administration,school.group_school_teacher,school.group_school_student,school.group_school_parent"
+        sequence="1"
+    />
+        <menuitem
+        id="menu_timetable_regular"
+        name="Regular Timetable"
+        parent="menu_timetable_1"
+        action="action_timetable_regular"
+        groups="school.group_school_administration,school.group_school_teacher,school.group_school_student,school.group_school_parent"
+        sequence="61"
+    />
 </odoo>
