--- a/school_evaluation/views/school_evaluation_view.xml
+++ b/school_evaluation/views/school_evaluation_view.xml
@@ -59,6 +59,7 @@
                 <field name="type" />
                 <field name="date" />
                 <field name="total" />
+                <field name="state" />
             </tree>
         </field>
     </record>
