--- a/assignment/views/homework_view.xml
+++ b/assignment/views/homework_view.xml
@@ -112,7 +112,7 @@
                             name="teacher_id"
                             placeholder="Teacher Name"
                             attrs="{'readonly':[('state','!=','draft')]}"
-                            options="{&quot;no_create&quot;: True, &quot;no_search&quot;: True}"
+                            options="{&quot;no_create&quot;: True}"
                         />
                     </group>
                     <group string="Subject and Dates">
@@ -281,7 +281,7 @@
                                 name="student_id"
                                 placeholder="Student"
                                 attrs="{'readonly':[('state','!=','draft')]}"
-                                options="{&quot;no_create&quot;: True, &quot;no_search&quot;: True}"
+                                options="{&quot;no_create&quot;: True}"
                                 domain="[('state','=','done')]"
                             />
                             <field name="stud_roll_no" invisible="1" />
@@ -289,7 +289,7 @@
                                 name="teacher_id"
                                 placeholder="Teacher"
                                 attrs="{'readonly':[('state','!=','draft')]}"
-                                options="{&quot;no_create&quot;: True, &quot;no_search&quot;: True}"
+                                options="{&quot;no_create&quot;: True}"
                             />
                         </group>
                         <group>
