--- a/school_hostel/report/hostel_fee_receipt.xml
+++ b/school_hostel/report/hostel_fee_receipt.xml
@@ -5,239 +5,103 @@
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="hostel">
                 <t t-call="web.external_layout">
+                    <div class="row mb-2" align="center">
+                        <h2>Hostel Fee Receipt</h2>
+                    </div>
+                    <br />
+                    <div class="row">
+                        <div class="col-6">
+                            <strong>Hostel Address:</strong>
+                                <div t-field="hostel.hostel_info_id" />
+                                <span t-field="hostel.hostel_info_id.street" /> <span
+                                t-field="hostel.hostel_info_id.street2"
+                            />
+                                <br />
+                                <span t-field="hostel.hostel_info_id.city" />  <span
+                                t-field="hostel.hostel_info_id.state_id"
+                            />
+                                <br />
+                                <span t-field="hostel.hostel_info_id.country_id" />
+                        </div>
+                        <div class="col-6">
+                            <strong>Tenant Address:</strong>
+                                <div t-field="hostel.student_id" />
+                                <span t-field="hostel.student_id.street" /> <span
+                                t-field="hostel.student_id.street2"
+                            />
+                                <br />
+                                <span t-field="hostel.student_id.city" />  <span
+                                t-field="hostel.student_id.state_id"
+                            />
+                                <br />
+                                <span t-field="hostel.student_id.country_id" />
+                        </div>
+                    </div>
                     <div class="page">
                         <div class="oe_structure" />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <div class="row" align="center">
-                            <h1>HOSTEL Fee Receipt</h1>
+                        <div class="row mt-4 mb-2" id="informations">
+                            <div
+                                class="col-auto col-3 mw-100 mb-2"
+                                name="admission_date"
+                            >
+                                <strong>Admission Date:</strong><br />
+                                <span class="m-0" t-field="hostel.admission_date" />
+                            </div>
+                            <div
+                                class="col-auto col-3 mw-100 mb-2"
+                                name="discharge_date"
+                            >
+                                <strong>Discharge Date:</strong><br />
+                                <span class="m-0" t-field="hostel.discharge_date" />
+                            </div>
+                            <div class="col-auto col-3 mw-100 mb-2" name="room_id">
+                                <strong>Room No:</strong><br />
+                                <span class="m-0" t-field="hostel.room_id" />
+                            </div>
+                            <div class="col-auto col-3 mw-100 mb-2" name="school_id">
+                                <strong>School Name:</strong><br />
+                                <span
+                                    class="m-0"
+                                    t-field="hostel.student_id.school_id.name"
+                                />
+                            </div>
                         </div>
-                        <table width="100%" style="background: #e6e6e6;">
-                            <t
-                                t-set="account_move_id"
-                                t-value="hostel.env['account.move'].sudo().search([('partner_id','=',hostel.student_id.partner_id.id)])"
-                            />
-                            <tr>
-                                <td>
-                                    <br />
-                                    <table width="100%">
-                                        <tr>
-                                            <td
-                                                align="left"
-                                                width="19%"
-                                                style="font-family: 'Helvetica';font-size: 18px;padding-left:15px;"
-                                            >
-                                                <b>HOSTEL Name</b>
-                                            </td>
-                                            <td width="1%">
-                                                <b>:</b>
-                                            </td>
-                                            <td
-                                                width="30%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <span
-                                                    t-field="hostel.hostel_info_id.name"
-                                                />
-                                            </td>
-                                            <td
-                                                align="left"
-                                                width="19%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <b>Room No.</b>
-                                            </td>
-                                            <td width="1%">
-                                                <b>:</b>
-                                            </td>
-                                            <td
-                                                width="30%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <span
-                                                    t-field="hostel.room_id.room_no"
-                                                />
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <br />
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <table width="100%">
-                                        <tr>
-                                            <td
-                                                align="left"
-                                                width="19%"
-                                                style="font-family: 'Helvetica';font-size: 18px;padding-left:15px;"
-                                            >
-                                                <b>Student Name</b>
-                                            </td>
-                                            <td width="1%">
-                                                <b>:</b>
-                                            </td>
-                                            <td
-                                                width="30%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <span
-                                                    t-field="hostel.student_id.name"
-                                                />
-                                            </td>
-                                            <td width="50%">
-                                                <span />
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <br />
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <table width="100%">
-                                        <tr>
-                                            <td
-                                                align="left"
-                                                width="19%"
-                                                style="font-family: 'Helvetica';font-size: 18px;padding-left:15px;"
-                                            >
-                                                <b>School Name</b>
-                                            </td>
-                                            <td width="1%">
-                                                <b>:</b>
-                                            </td>
-                                            <td
-                                                width="30%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <span
-                                                    t-field="hostel.student_id.school_id.name"
-                                                />
-                                            </td>
-                                            <td width="50%">
-                                                <span />
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <br />
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <table width="100%">
-                                        <tr>
-                                            <td
-                                                align="left"
-                                                width="19%"
-                                                style="font-family: 'Helvetica';font-size: 18px;padding-left:15px;"
-                                            >
-                                                <b>Admission Date</b>
-                                            </td>
-                                            <td width="1%">
-                                                <b>:</b>
-                                            </td>
-                                            <td
-                                                width="30%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <span t-field="hostel.admission_date" />
-                                            </td>
-                                            <td
-                                                align="left"
-                                                width="19%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <b>Discharge Date</b>
-                                            </td>
-                                            <td width="1%">
-                                                <b>:</b>
-                                            </td>
-                                            <td
-                                                width="30%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <span t-field="hostel.discharge_date" />
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <br />
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <table width="100%">
-                                        <tr>
-                                            <td
-                                                align="left"
-                                                width="19%"
-                                                style="font-family: 'Helvetica';font-size: 18px;padding-left:15px;"
-                                            >
-                                                <b>Total Room Rent</b>
-                                            </td>
-                                            <td width="1%">
-                                                <b>:</b>
-                                            </td>
-                                            <td
-                                                width="30%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <span t-field="hostel.room_rent" />
-                                            </td>
-                                            <td width="50%">
-                                                <span />
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <br />
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <table width="100%">
-                                        <tr>
-                                            <td
-                                                align="left"
-                                                width="19%"
-                                                style="font-family: 'Helvetica';font-size: 18px;padding-left:15px;"
-                                            >
-                                                <b>Paid Fee</b>
-                                            </td>
-                                            <td width="1%">
-                                                <b>:</b>
-                                            </td>
-                                            <td
-                                                width="30%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <span t-field="hostel.paid_amount" />
-                                            </td>
-                                            <td
-                                                align="left"
-                                                width="19%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <b>Remaining Fee</b>
-                                            </td>
-                                            <td width="1%">
-                                                <b>:</b>
-                                            </td>
-                                            <td
-                                                width="30%"
-                                                style="font-family: 'Helvetica';font-size: 18px;"
-                                            >
-                                                <span
-                                                    t-field="hostel.remaining_amount"
-                                                />
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <br />
-                                </td>
-                            </tr>
+                        <br />
+                        <br />
+                        <table class="table table-bordered mt-4" style="border:medium ">
+                            <thead>
+                                <tr style="background: #e6e6e6;">
+                                    <th
+                                        name="th_description"
+                                        class="text-start"
+                                    >Description</th>
+                                    <th
+                                        name="th_duration"
+                                        class="text-start"
+                                    >Duration</th>
+                                    <th
+                                        name="th_priceunit"
+                                        class="text-start"
+                                    >Unit Price</th>
+                                    <th name="th_subtotal" class="text-start">
+                                        <span>Amount</span>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody class="sale_tbody">
+                                <td name="td_description"><span
+                                        t-field="hostel.hostel_info_id"
+                                    /> - <span t-field="hostel.room_id" /></td>
+                                <td name="td_duration"><span
+                                        t-field="hostel.duration"
+                                    /></td>
+                                <td name="td_priceunit"><span
+                                        t-field="hostel.room_id.rent_amount"
+                                    /></td>
+                                <td name="td_total"><span
+                                        t-field="hostel.room_rent"
+                                    /></td>
+                            </tbody>
                         </table>
                     </div>
                 </t>
