--- a/school_hostel/views/hostel_view.xml
+++ b/school_hostel/views/hostel_view.xml
@@ -34,8 +34,43 @@
                             domain="[('is_hostel_rector','=',True)]"
                         />
                     </group>
-                    <group col="2">
+                     <group col="2">
                         <field name="other_info" />
+                        <label for="street" string="Address" />
+                        <div class="o_address_format">
+                            <field
+                                name="street"
+                                class="o_address_street"
+                                placeholder="Street..."
+                            />
+                            <field
+                                name="street2"
+                                class="o_address_street"
+                                placeholder="Street2..."
+                            />
+                            <field
+                                name="city"
+                                class="o_address_city"
+                                placeholder="City"
+                                required="1"
+                            />
+                            <field
+                                name="state_id"
+                                class="o_address_state"
+                                domain="[('country_id','=',country_id)]"
+                                required="1"
+                                placeholder="State"
+                                options="{'no_open': true}"
+                            />
+                            <field name="zip" class="o_address_zip" placeholder="ZIP" />
+                            <field
+                                name="country_id"
+                                class="o_address_city,oe_no_button"
+                                placeholder="Country"
+                                options="{'no_open': true}"
+                                required="1"
+                            />
+                        </div>
                     </group>
                     <notebook>
                         <page string="Room Detail">
