--- a/school_attendance/wizard/monthly_attendance_wizard_view.xml
+++ b/school_attendance/wizard/monthly_attendance_wizard_view.xml
@@ -21,14 +21,17 @@
                             <field
                                 name="course_id"
                                 required="1"
-                                options="{&quot;no_create&quot;: True, &quot;no_open&quot;: True}"
+                                context="{'default_standard_id': id}"
                             />
+                                <!-- options="{&quot;no_create&quot;: True, &quot;no_open&quot;: True}" -->
+                                <!-- domain="[('standard_id', '=', standard_name))]" -->
+                            <field name="standard_name" />
                             <field name="is_elective_subject" />
                             <field
                                 name="subject_id"
                                 attrs="{'invisible':[('is_elective_subject','=', False)], 'required':[('is_elective_subject','!=', False)]}"
                                 options="{&quot;no_create&quot;: True}"
-                                domain="[('is_elective_subject', '=', True)]"
+                                domain="[('is_elective_subject', '=', True),('standard_id.name','=',standard_name)]"
                             />
                         </group>
                     </group>
