[FIX][16.0] Fixed issues

--- a/exam/views/exam_view.xml
+++ b/exam/views/exam_view.xml
@@ -159,6 +159,7 @@
                                 attrs="{'readonly': [('state','!=','draft')]}"
                                 placeholder="Start Date"
                                 required="1"
+                                widget="datepicker"
                             />
                         </group>
                         <group col="2">
